MDEV-30526 Assertion `rights == merged->cols' failed in update_role_columns

another case of the antipattern "iterate the HASH and delete
elements as we go"